<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_card">Cartão de Visita</string>
    <string name="add_new_card_floating">Add new card</string>
    <string name="new_card_text">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_telephone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_company_name">Nome da Empresa</string>
    <string name="label_color">Cor</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_show_success">Cadastrado com Sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>